# Mtm

./: .gitignore  README.md
WhenItWasGood/: chessGame.h  chessMapUtils.h  chessTournament.c  chessTournament.h
ex1/: .gitignore  CMakeLists.txt  DLLNode.c  Player.c  PlayerTests.c  chessDefs.h  chessGame.c  chessGame.h  chessGameCopy.c  chessGameCopy.h  chessGameMap.c  chessGameMap.h  chessPlayer.c  chessPlayer.h  chessPlayerTest.c  chessPlayerTests.c  chessSystem.c  chessSystem.h  chessTournament.c  chessTournament.h  chessTournamentTest.c  map.c  strUtils.c  strUtils.h  testMap.c
ex1/Dry/: DryPart2.c  dry.c  testDry.c
ex1/Maaruf/: chessPlayer.h  chessSystem.c  chessSystemTestsExample.c  chessTournament.c  chessTournament.h
ex1/TestingFunctionsIndividually/: CMakeLists.txt  main.c
ex1/chess/: CMakeLists.txt  CMakeListsOld.txt  chessDefs.h  chessGame.c  chessGame.h  chessMapUtils.c  chessMapUtils.h  chessPlayer.c  chessPlayer.h  chessPlayerID.c  chessPlayerID.h  chessSystem.c  chessSystem.h  chessSystemTestsExample.c  chessTournament.c  chessTournament.h  makefile  map.c  strUtils.c  strUtils.h
ex1/chess/mtm_ex1_tests_UNIX_compatible/tests/: chessSystemTestsExample.c
ex1/chess/test/: CMakeLists.txt  PlayerIdTest.c  chessPlayerTest.c  chessSystemTest.c  chessSystemTestsExample.c  chessTournamentTest.c
ex1/chess/test/mtm_ex1_tests_UNIX_compatible/tests/: chessSystemTestsExample.c
ex1/chess/test/your_output/: tournament_statistics_1.txt
ex1/chess/tests/: chessSystemTestsExample.c
ex1/dry/: CMakeLists.txt  dry.c
ex1/dry/test/: mergeSortedListsTest.c
ex1/map/: CMakeLists.txt  DLLNode.c  DLLNode.h  LinkedList.c  LinkedList.h  ListTests.c  MapTests.c  NodeTests.c  ex1New  main.c  map.c  mapTests1.c
ex1/map/test/: ListTests.c  MapTests.c  NodeTests.c  mapTests1.c  map_example_test.c  test_utilities.h
ex1/map/tests/: mapTests1.c
ex1/mtm_ex1_tests_UNIX_compatible/: chessMapUtils.c  chessSystem.c
ex1/mtm_ex1_tests_UNIX_compatible/chess/: chessDefs.h
ex1/mtm_ex1_tests_UNIX_compatible/chess/test/: chessPlayerTest.c
ex1/mtm_ex1_tests_UNIX_compatible2/: readme.txt
ex1/mtm_ex1_tests_UNIX_compatible2/tests/: map_example_test.c
ex1/test/mtm_ex1_tests_UNIX_compatible/: ChessSystem  chessGame.c  chessMapUtils.h  chessPlayerID.c  chessTournament.h
ex1/test/mtm_ex1_tests_UNIX_compatible/chess/: chessGame.c  chessMapUtils.c  chessPlayer.c  chessPlayerID.h  chessSystem.c  chessTournament.c  chessTournament.h
ex1/test/mtm_ex1_tests_UNIX_compatible/chess/map/: LinkedList.h
ex1/test/mtm_ex1_tests_UNIX_compatible/chess/test/: chessSystemTest.c  chessSystemTestsExample.c  chessTournamentTest.c  test_utilities.h
ex1/test/mtm_ex1_tests_UNIX_compatible/mtm_map/: DLLNode.c
ex2/: ExamDetails.cpp  ExamDetails.h  SortedList.h
ex2/PartA/: CMakeLists.txt  ExamDetails.cpp  ExamDetails.h  ExamTest.cpp  SortedListNode.h  main.cpp  sortedList.h
ex2/PartA/test/: ExamDetailsTest.cpp  ExamTest.cpp  My_output.txt  SortedList.cpp  SortedList.h  almog_tests_part_a.cpp
ex2/partA/: ExamDetails.cpp  SortedList.cpp  SortedList.h  examDetails.cpp  examDetails.h  sortedList.h  sortedListNode.h
ex2/partA/test/: SortedListTest.cpp
ex2/partB/: Auxiliaries.cpp  Auxiliaries.h  Board.cpp  Board.h  CMakeLists.txt  Character.cpp  Character.h  Exceptions.cpp  Exceptions.h  Game.cpp  Game.h  Matrix.h  Medic.cpp  Medic.h  Planet-UML.puml  Sniper.cpp  Sniper.h  Soldier.cpp  Soldier.h
ex2/partB/2020b/: Character.h  Medic.cpp  Soldier.cpp
ex2/partB/Inon_2020b/partA/: IntMatrix.cpp  IntMatrix.h
ex2/partB/Inon_2020b/partB/: Matrix.h
ex2/partB/Inon_2020b/partC/: Auxiliaries.cpp  Auxiliaries.h  Character.cpp  Character.h  Exceptions.cpp  Exceptions.h  Game.cpp  Game.h  Matrix.h  Medic.cpp  Medic.h  Sniper.cpp  Sniper.h  Soldier.cpp  Soldier.h
ex2/partB/Inon_2020b/partC/test/: test_partC.cpp
ex2/partB/Ohad_2020b/: Character.cpp  Exceptions.h  Game.cpp  Game.h  Matrix.h  Medic.h  Sniper.cpp  Sniper.h  Soldier.h
ex2/partB/test/: test_partC.cpp
ex2/partB/test/game_test_Meron_Shira_v5/: game_test_Meron_Shira.cpp
ex2/partB/test/matam_tests_game/: autoGameTester.cpp
ex2/partB/test/testAlmogIDE/: testAlmog.cpp
ex3/: gradesCalc.py  test.py
ex3/tests/Agressive_tests_Hemi_grades/: Averages.txt  diff.txt
mtm_ex1_tests_UNIX_compatible/mtm_map/: DLLNode.h  makefile
